--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
     "start": "node server.js",
-      "test": "mocha"
+    "test": "mocha"
   },
   "author": "Chris Sevilleja <scotch.io>",
   "license": "MIT",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "chai": "^5.2.0",
-    "mocha": "^11.4.0"
+    "mocha": "^11.4.0",
+    "mocha-junit-reporter": "^2.2.1"
   }
 }
