--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "node-api",
+  "name": "api",
   "main": "server.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/scotch-io/node-token-authentication"
+    "url": "git://github.com/scotch-io/node-token-authentication.git"
   },
   "scripts": {
     "start": "node server.js",
@@ -14,12 +14,22 @@
   "dependencies": {
     "body-parser": "~1.18.2",
     "express": "~4.16.1",
-    "mongoose": "~4.11.14",
+    "mongoose": "^8.15.0",
     "morgan": "~1.9.0"
   },
   "devDependencies": {
     "chai": "^5.2.0",
     "mocha": "^11.4.0",
     "mocha-junit-reporter": "^2.2.1"
-  }
+  },
+  "version": "1.0.0",
+  "description": "Using the new Express 4.0 Router to build an API",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/scotch-io/node-token-authentication/issues"
+  },
+  "homepage": "https://github.com/scotch-io/node-token-authentication#readme"
 }
