--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,3 +8,5 @@ services:
       - "3005:8080"
     environment:
       - NODE_ENV=production
+      - NEW_RELIC_LICENSE_KEY=${03dac8586fab61361232df1b233e77d1FFFFNRAL}
+
