--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "body-parser": "~1.18.2",
     "express": "~4.16.1",
     "mongoose": "^8.15.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "newrelic": "^12.19.0"
   },
   "devDependencies": {
     "chai": "^5.2.0",
