--- a/package.json
+++ b/package.json
@@ -1,16 +1,28 @@
 {
   "name": "api",
+  "version": "1.0.0",
+  "description": "Using the new Express 4.0 Router to build an API",
   "main": "server.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/scotch-io/node-token-authentication.git"
   },
-  "scripts": {
-    "start": "node server.js",
-    "test": "mocha"
-  },
   "author": "Chris Sevilleja <scotch.io>",
   "license": "MIT",
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/scotch-io/node-token-authentication/issues"
+  },
+  "homepage": "https://github.com/scotch-io/node-token-authentication#readme",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "test": "mocha",
+    "test:ci": "mocha --reporter mocha-junit-reporter --reporter-options mochaFile=test-results.xml",
+    "snyk:scan": "snyk test"
+  },
   "dependencies": {
     "body-parser": "~1.18.2",
     "express": "~4.16.1",
@@ -20,17 +32,9 @@
   },
   "devDependencies": {
     "chai": "^5.2.0",
-    "mocha": "^11.4.0",
-    "mocha-junit-reporter": "^2.2.1"
-  },
-  "version": "1.0.0",
-  "description": "Using the new Express 4.0 Router to build an API",
-  "directories": {
-    "test": "test"
-  },
-  "keywords": [],
-  "bugs": {
-    "url": "https://github.com/scotch-io/node-token-authentication/issues"
-  },
-  "homepage": "https://github.com/scotch-io/node-token-authentication#readme"
+    "chai-http": "^5.1.2",
+    "mocha": "^11.5.0",
+    "mocha-junit-reporter": "^2.2.1",
+    "supertest": "^7.1.1"
+  }
 }
